# hand-gestures-lock

./: camera.py  demo.py  pyproject.toml  requirements.txt
